Candidaturas and ofertas por empresa pt1

--- a/src/app/component/empresa/empresa.admin.plist.routed/empresa.admin.plist.routed.component.html
+++ b/src/app/component/empresa/empresa.admin.plist.routed/empresa.admin.plist.routed.component.html
@@ -98,11 +98,15 @@
               </th>
 
               <th (click)="sort('sector')" class="bg-primary text-white">
-                sector @if (strField === 'sector') { @if (strDir
+                Sector @if (strField === 'sector') { @if (strDir
                 === 'desc') {
                 <i class="bi bi-caret-down-fill"></i>
                 } @else {
                 <i class="bi bi-caret-up-fill"></i>} }
+              </th>
+
+              <th (click)="sort('ofertas')" class="bg-primary text-white">
+                Ofertas de la empresa 
               </th>
 
               <th (click)="sort('acciones')" class="bg-primary text-white">
@@ -121,11 +125,16 @@
             <tr>
               <td class="text-center">{{ empresa.id }}</td>
               <td class="text-start">{{ empresa.nombre | trim : 25 }}</td>
-              <td class="text-start" style="font-size: small">{{ empresa.email }}
-              </td>
+              <td class="text-start" style="font-size: small">{{ empresa.email }} </td>
 
               <td class="text-start" style="font-size: small">
                 {{ empresa.sector.nombre }}
+              </td>
+
+              <td class="text-center" style="font-size: medium">
+                <button type="button" class="btn btn-danger"  >
+                  <a class="text-decoration-none text-dark " href="admin/oferta/xempresa/plist/{{ empresa.id }}">{{ empresa.ofertas }} ofertas</a>
+                </button>
               </td>
 
               <td>
