--- a/src/app/component/candidatura/candidatura.xoferta.admin.plist.routed/candidatura.xoferta.admin.plist.routed.component.html
+++ b/src/app/component/candidatura/candidatura.xoferta.admin.plist.routed/candidatura.xoferta.admin.plist.routed.component.html
@@ -3,7 +3,7 @@
     <div class="col text-center">
       <h2 class="my-2">
         <i class="bi bi-list"></i>
-        Lista de Candidaturas
+        Lista de Candidaturas por Oferta
         <i class="bi bi-person-circle"></i>
       </h2>
       <a href="admin/candidatura/create"><button class="btn btn-primary my-2 mx-2">
