feat: Implement Candidatura and Oferta components with routing and pagination
- Added CandidaturaXalumnoAdminPlistRoutedComponent for managing candidaturas related to alumnos.
- Introduced CandidaturaXofertaAdminPlistRoutedComponent for managing candidaturas related to ofertas.
- Enhanced HTML templates for better user experience and added dynamic titles.
- Implemented sorting, filtering, and pagination functionalities in both components.
- Updated CSS styles for improved layout and responsiveness.
- Modified service methods to fetch candidaturas based on alumno and oferta IDs.
- Updated model interfaces to include candidaturas count for alumnos and ofertas.
- Refactored shared components for consistent styling and layout across the application.

--- a/src/app/component/candidatura/candidatura.xoferta.admin.plist.routed/candidatura.xoferta.admin.plist.routed.component.html
+++ b/src/app/component/candidatura/candidatura.xoferta.admin.plist.routed/candidatura.xoferta.admin.plist.routed.component.html
@@ -3,9 +3,10 @@
     <div class="col text-center">
       <h2 class="my-2">
         <i class="bi bi-list"></i>
-        Lista de Candidaturas por Oferta
+        Lista de Candidaturas para la Oferta: {{ oOferta?.titulo }}
         <i class="bi bi-person-circle"></i>
       </h2>
+      
       <a href="admin/candidatura/create"><button class="btn btn-primary my-2 mx-2">
           <i class="bi bi-plus-square"></i>
           Crear nueva candidatura
@@ -107,7 +108,7 @@
 
               <th (click)="sort('acciones')" class="bg-primary text-white">
                 Acciones
-                 @if (strField === 'accipones') { @if (strDir === 'desc') {
+                 @if (strField === 'acciones') { @if (strDir === 'desc') {
                 <i class="bi bi-caret-down-fill"></i>
                 } @else {
                 <i class="bi bi-caret-up-fill"></i>} }
