--- a/src/app/component/alumno/alumno.admin.plist.routed/alumno.admin.plist.routed.component.html
+++ b/src/app/component/alumno/alumno.admin.plist.routed/alumno.admin.plist.routed.component.html
@@ -1,170 +1,150 @@
-<div class="container mt-5 d-flex align-items-center justify-content-center">
-  <div class="row">
-    <div class="col text-center">
-      <h2 class="my-2">
-        <i class="bi bi-list"></i>
-        Lista de Alumnos
-        <i class="bi bi-person-circle"></i>
-      </h2>
-      <a href="admin/alumno/create"><button class="btn btn-primary my-2 mx-2">
-          <i class="bi bi-plus-square"></i>
-          Crear nuevo alumno
-        </button></a>
+<div class="container my-5">
+  <div class="d-flex justify-content-center align-items-center flex-wrap">
+    <h2 class="my-2">
+      <i class="bi bi-list "></i> 
+      Lista de Alumnos 
+    </h2>
+  </div>
 
-      <div class="d-inline-flex mx-2">
-        <input type="text" class="form-control" placeholder="Buscar" (keyup)="filter($event)" [(ngModel)]="strFiltro" />
-      </div>
+  <div class="d-flex justify-content-between align-items-center my-3 ">
+    <a href="admin/alumno/create" class="btn btn-primary mb-2 btn-lg ">
+      <i class="bi bi-plus-square"></i> Nuevo alumno
+    </a>
+  </div>
 
-      <div class="d-inline-flex mx-2">
-        <nav class="my-4">
-          <ul class="pagination justify-content-center">
-            <li class="page-item" [class.active]="nRpp === 10">
-              <a class="page-link" (click)="goToRpp(10)" href="#">10</a>
-            </li>
-            <li class="page-item" [class.active]="nRpp === 50">
-              <a class="page-link" (click)="goToRpp(50)" href="#">50</a>
-            </li>
-            <li class="page-item" [class.active]="nRpp === 100">
-              <a class="page-link" (click)="goToRpp(100)" href="#">100</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
 
-      <nav class="my-2">
-        <ul class="pagination justify-content-center">
-          <li class="page-item">
-            <a class="page-link" [class.disabled]="nPage - -1 === 1" (click)="goToPrev()" href="#">
-              Anterior
-              <i class="bi bi-caret-left-square-fill"></i>
-            </a>
-          </li>
+  <!-- Paginación RPP -->
+  <div class="my-3 ">
+    <nav>
+      <ul class="pagination justify-content-center flex-wrap">
+        <li class="page-item" [class.active]="nRpp === 10">
+          <a class="page-link" (click)="goToRpp(10)" href="#">10</a>
+        </li>
+        <li class="page-item" [class.active]="nRpp === 50">
+          <a class="page-link" (click)="goToRpp(50)" href="#">50</a>
+        </li>
+        <li class="page-item" [class.active]="nRpp === 100">
+          <a class="page-link" (click)="goToRpp(100)" href="#">100</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 
-          <li class="page-item" *ngFor="let pag of arrBotonera">
-            @if(pag==='...'){
-            <a class="page-link">{{ pag }}</a>
-            } @else {
-            <a class="page-link" href="#" (click)="goToPage(-(-pag))" [class.active]="nPage - -1 === -(-pag)">
-              {{ pag }}
-            </a>
-            }
-          </li>
 
-          <li class="page-item">
-            <a class="page-link" [class.disabled]="nPage - -1 === oPage?.totalPages" (click)="goToNext()" href="#">
-              <i class="bi bi-caret-right-square-fill"></i>
-              Siguiente</a>
-          </li>
-        </ul>
-      </nav>
+  <div class="d-flex justify-content-between">
+    <div class="col-6">
+      <input type="text" class="form-control my-2 border border-primary" placeholder="Buscar alumno"
+        (keyup)="filter($event)" [(ngModel)]="strFiltro" />
+    </div>
 
-      <div class="d-flex justify-content-between">
-        @if (strFiltro.length>0) {
-        <h5 class="text-muted">
-          Filtrado por: <span class="text-danger">{{ strFiltro }}</span>
-        </h5>
-        } @else{
-        <h5 class="text-muted">Sin filtrar</h5>
+    @if (strFiltro.length>0) {
+    <h5 class="text-muted">
+      Filtrado por: <span class="text-danger">{{ strFiltro }}</span>
+    </h5>
+    } @else{
+    <h5 class="text-muted">Sin filtrar</h5>
+    }
+    <h5 class="text-muted">
+      Mostrando {{ oPage?.numberOfElements | number : "1.0-0" }} de
+      {{ oPage?.totalElements | number : "1.0-0" }}
+    </h5>
+  </div>
+
+
+  <nav class="my-2">
+    <ul class="pagination justify-content-center">
+      <li class="page-item">
+        <a class="page-link" [class.disabled]="nPage - -1 === 1" (click)="goToPrev()" href="#">
+          Anterior
+          <i class="bi bi-caret-left-square-fill"></i>
+        </a>
+      </li>
+
+      <li class="page-item" *ngFor="let pag of arrBotonera">
+        @if(pag==='...'){
+        <a class="page-link">{{ pag }}</a>
+        } @else {
+        <a class="page-link" href="#" (click)="goToPage(-(-pag))" [class.active]="nPage - -1 === -(-pag)">
+          {{ pag }}
+        </a>
         }
-        <h5 class="text-muted">
-          Mostrando {{ oPage?.numberOfElements | number : "1.0-0" }} de
-          {{ oPage?.totalElements | number : "1.0-0" }}
-        </h5>
-      </div>
+      </li>
 
-      <div class="d-flex flex-column">
-        <table class="table table-striped table-bordered my-2"
-          style="table-layout: fixed; width: 100%; word-break: break-all">
-          <thead>
-            <tr>
-              <th (click)="sort('id')" class="bg-danger text-white">
-                ID @if (strField === 'id') { @if (strDir === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
-              <th (click)="sort('nombre')" class="bg-primary text-white">
-                Nombre alumno @if (strField === 'nombre') { @if (strDir === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
+      <li class="page-item">
+        <a class="page-link" [class.disabled]="nPage - -1 === oPage?.totalPages" (click)="goToNext()" href="#">
+          <i class="bi bi-caret-right-square-fill"></i>
+          Siguiente</a>
+      </li>
+    </ul>
+  </nav>
 
-              <th (click)="sort('ape1')" class="bg-primary text-white">
-                Apellido @if (strField === 'ape1') { @if (strDir === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
 
-              <th (click)="sort('ape2')" class="bg-primary text-white">
-                Apellido 2 @if (strField === 'ape2') { @if (strDir === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
+  <!-- Grid de cards -->
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mx-auto my-3 bg-dark mb-4">
+    @for (alumno of oPage?.content; track alumno.id) {
+    <div class="col">
+      <div class="card h-100 shadow-sm bg-light " style="position: relative;">
+        <img src="../../../../../public/img/PerfilUsuario.jpg" alt="Perfil" class="corner-img">
+        <div class="card-body">
+          <h5 class="card-title">{{ alumno.nombre }} {{ alumno.ape1 }} {{ alumno.ape2 }}</h5>
+          <p class="card-text mb-1"><strong>Email:</strong> {{ alumno.email }}</p>
+          <p class="card-text mb-1"><strong>Sector:</strong> {{ alumno.sector.nombre }}</p>
 
-              <th (click)="sort('email')" class="bg-primary text-white">
-                Correo @if (strField === 'email') { @if (strDir === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
+          <p class="card-text mb-3"><strong>Candidaturas: </strong>
+            <a href="admin/candidatura/xalumno/plist/{{ alumno.id }}" class="btn btn-outline-danger btn-sm">
+              {{ alumno.candidaturas }} Candidaturas
+            </a>
+          </p>
 
-              <th (click)="sort('sector')" class="bg-primary text-white">
-                sector @if (strField === 'sector') { @if (strDir
-                === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
-
-              <th (click)="sort('acciones')" class="bg-primary text-white">
-                Acciones
-                 @if (strField === 'accipones') { @if (strDir === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
-
-            </tr>
-          </thead>
-
-          <tbody>
-            @for (alumno of oPage?.content; track alumno.id) {
-            <tr>
-              <td class="text-center">{{ alumno.id }}</td>
-              <td class="text-start">{{ alumno.nombre | trim : 20 }}</td>
-              <td class="text-start">{{ alumno.ape1 | trim : 20 }}</td>
-              <td class="text-start">{{ alumno.ape2 | trim : 20 }}</td>
-              <td class="text-start" style="font-size: small">{{ alumno.email }}
-              </td>
-              <td class="text-start" style="font-size: small">
-                {{ alumno.sector.nombre }}
-              </td>
-
-              <td>
-                <div class="btn-group" role="group" aria-label="Basic example">
-                  <button type="button" class="btn btn-success" (click)="view(alumno)">
-                    <i class="bi bi-eye icon-15"></i>
-                  </button>
-                  <button type="button" class="btn btn-warning icon-15" (click)="edit(alumno)">
-                    <i class="bi bi-pen"></i>
-                  </button>
-                  <button type="button" class="btn btn-danger icon-15" (click)="remove(alumno)">
-                    <i class="bi bi-trash"></i>
-                  </button>
-                </div>
-              </td>
-            </tr>
-            } @empty {
-            <tr>
-              <td colspan="6">No hay alumnos</td>
-            </tr>
-            }
-          </tbody>
-        </table>
+          <div class="d-flex justify-content-between">
+            <button type="button" class="btn btn-success btn-lg" (click)="view(alumno)">
+              <i class="bi bi-eye"></i>
+            </button>
+            <button type="button" class="btn btn-warning btn-lg" (click)="edit(alumno)">
+              <i class="bi bi-pen"></i>
+            </button>
+            <button type="button" class="btn btn-danger btn-lg" (click)="remove(alumno)">
+              <i class="bi bi-trash"></i>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
+    } @empty {
+    <div class="col">
+      <div class="alert alert-warning text-center">
+        No hay alumnos
+      </div>
+    </div>
+    }
+  </div>
+
+  <!-- Paginación de páginas -->
+  <div class="my-4">
+    <nav>
+      <ul class="pagination justify-content-center flex-wrap">
+        <li class="page-item">
+          <a class="page-link" [class.disabled]="nPage - -1 === 1" (click)="goToPrev()" href="#">
+            <i class="bi bi-caret-left-square-fill"></i> Anterior
+          </a>
+        </li>
+
+        <li class="page-item" *ngFor="let pag of arrBotonera">
+          @if(pag==='...'){
+          <a class="page-link disabled">{{ pag }}</a>
+          } @else {
+          <a class="page-link" href="#" (click)="goToPage(-(-pag))" [class.active]="nPage - -1 === -(-pag)">
+            {{ pag }}
+          </a>
+          }
+        </li>
+
+        <li class="page-item">
+          <a class="page-link" [class.disabled]="nPage - -1 === oPage?.totalPages" (click)="goToNext()" href="#">
+            Siguiente <i class="bi bi-caret-right-square-fill"></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </div>
 </div>
