--- a/src/app/component/alumno/alumno.xsector.admin.plist.routed/alumno.xsector.admin.plist.routed.component.html
+++ b/src/app/component/alumno/alumno.xsector.admin.plist.routed/alumno.xsector.admin.plist.routed.component.html
@@ -1,10 +1,9 @@
 <div class="container mt-5 d-flex align-items-center justify-content-center">
   <div class="row">
     <div class="col text-center">
-      <h2 class="my-2">   
+      <h2 class="my-2">
         <i class="bi bi-list"></i>
-        Lista de Alumnos por sector
-        <i class="bi bi-person-circle"></i>
+        Alumnos en el sector<span class="sector-nombre">{{oSector?.nombre}}</span>
       </h2>
 
       <div class="d-inline-flex mx-2">
