--- a/src/app/component/shared/shared.home.routed/shared.home.routed.component.html
+++ b/src/app/component/shared/shared.home.routed/shared.home.routed.component.html
@@ -1,10 +1,5 @@
-<div class="container d-flex align-items-center flex-column mt-5">
-
-
-  <img class="mb-5" src="img/Logo.png" width="550" alt="logo">
-
-  <p class="masthead-subheading font-weight-light mb-0">Encuentra o publica tu trabajo</p>
-  <p class="masthead-subheading font-weight-light mb-0">Luna Khanji Fustek </p>
-
-
-</div>
+<body>
+  <div class="container">
+    <p class="subheading">Encuentra o publica tu trabajo</p>
+  </div>
+</body>
