--- a/src/app/component/alumno/alumno.alumno.plist.routed/alumno.alumno.plist.routed.component.html
+++ b/src/app/component/alumno/alumno.alumno.plist.routed/alumno.alumno.plist.routed.component.html
@@ -6,73 +6,73 @@
     </h2>
   </div>
   <div class="col text-center">
-  <a href="admin/alumno/create"><button class="btn btn-primary my-2 mx-2">
-      <i class="bi bi-plus-square"></i>
-      Crear nueva alumno
-    </button></a>
+    <a href="admin/oferta/create"><button class="btn btn-primary my-2 mx-2">
+        <i class="bi bi-plus-square"></i>
+        Crear nueva oferta
+      </button></a>
 
-  <div class="d-inline-flex mx-2">
-    <input type="text" class="form-control" placeholder="Buscar" (keyup)="filter($event)" [(ngModel)]="strFiltro" />
-  </div>
+    <div class="d-inline-flex mx-2">
+      <input type="text" class="form-control" placeholder="Buscar" (keyup)="filter($event)" [(ngModel)]="strFiltro" />
+    </div>
 
-  <div class="d-inline-flex mx-2">
-    <nav class="my-4">
+    <div class="d-inline-flex mx-2">
+      <nav class="my-4">
+        <ul class="pagination justify-content-center">
+          <li class="page-item" [class.active]="nRpp === 10">
+            <a class="page-link" (click)="goToRpp(10)" href="#">10</a>
+          </li>
+          <li class="page-item" [class.active]="nRpp === 50">
+            <a class="page-link" (click)="goToRpp(50)" href="#">50</a>
+          </li>
+          <li class="page-item" [class.active]="nRpp === 100">
+            <a class="page-link" (click)="goToRpp(100)" href="#">100</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+    <nav class="my-2">
       <ul class="pagination justify-content-center">
-        <li class="page-item" [class.active]="nRpp === 10">
-          <a class="page-link" (click)="goToRpp(10)" href="#">10</a>
+        <li class="page-item">
+          <a class="page-link" [class.disabled]="nPage - -1 === 1" (click)="goToPrev()" href="#">
+            Anterior
+            <i class="bi bi-caret-left-square-fill"></i>
+          </a>
         </li>
-        <li class="page-item" [class.active]="nRpp === 50">
-          <a class="page-link" (click)="goToRpp(50)" href="#">50</a>
+
+        <li class="page-item" *ngFor="let pag of arrBotonera">
+          @if(pag==='...'){
+          <a class="page-link">{{ pag }}</a>
+          } @else {
+          <a class="page-link" href="#" (click)="goToPage(-(-pag))" [class.active]="nPage - -1 === -(-pag)">
+            {{ pag }}
+          </a>
+          }
         </li>
-        <li class="page-item" [class.active]="nRpp === 100">
-          <a class="page-link" (click)="goToRpp(100)" href="#">100</a>
+
+        <li class="page-item">
+          <a class="page-link" [class.disabled]="nPage - -1 === oPage?.totalPages" (click)="goToNext()" href="#">
+            <i class="bi bi-caret-right-square-fill"></i>
+            Siguiente</a>
         </li>
       </ul>
     </nav>
+
+    <div class="d-flex justify-content-between">
+      @if (strFiltro.length>0) {
+      <h5 class="text-muted">
+        Filtrado por: <span class="text-danger">{{ strFiltro }}</span>
+      </h5>
+      } @else{
+      <h5 class="text-muted">Sin filtrar</h5>
+      }
+      <h5 class="text-muted">
+        Mostrando {{ oPage?.numberOfElements | number : "1.0-0" }} de
+        {{ oPage?.totalElements | number : "1.0-0" }}
+      </h5>
+    </div>
   </div>
 
-  <nav class="my-2">
-    <ul class="pagination justify-content-center">
-      <li class="page-item">
-        <a class="page-link" [class.disabled]="nPage - -1 === 1" (click)="goToPrev()" href="#">
-          Anterior
-          <i class="bi bi-caret-left-square-fill"></i>
-        </a>
-      </li>
-
-      <li class="page-item" *ngFor="let pag of arrBotonera">
-        @if(pag==='...'){
-        <a class="page-link">{{ pag }}</a>
-        } @else {
-        <a class="page-link" href="#" (click)="goToPage(-(-pag))" [class.active]="nPage - -1 === -(-pag)">
-          {{ pag }}
-        </a>
-        }
-      </li>
-
-      <li class="page-item">
-        <a class="page-link" [class.disabled]="nPage - -1 === oPage?.totalPages" (click)="goToNext()" href="#">
-          <i class="bi bi-caret-right-square-fill"></i>
-          Siguiente</a>
-      </li>
-    </ul>
-  </nav>
-
-  <div class="d-flex justify-content-between">
-    @if (strFiltro.length>0) {
-    <h5 class="text-muted">
-      Filtrado por: <span class="text-danger">{{ strFiltro }}</span>
-    </h5>
-    } @else{
-    <h5 class="text-muted">Sin filtrar</h5>
-    }
-    <h5 class="text-muted">
-      Mostrando {{ oPage?.numberOfElements | number : "1.0-0" }} de
-      {{ oPage?.totalElements | number : "1.0-0" }}
-    </h5>
-  </div>
-
-  </div>
   <!-- Grid de cards -->
   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mx-auto my-3 bg-dark mb-4">
     @for (alumno of oPage?.content; track alumno.id) {
@@ -94,12 +94,12 @@
             <button type="button" class="btn btn-success btn-lg" (click)="view(alumno)">
               <i class="bi bi-eye"></i>
             </button>
-            <button type="button" class="btn btn-warning btn-lg" (click)="edit(alumno)">
-              <i class="bi bi-pen"></i>
+
+            <!-- boton para inscribirse a una oferta de trabajo -->
+            <button type="button" class="btn btn-success btn-lg" (click)="incribirse(alumno)">
+              <i class="bi bi-eye"></i>
             </button>
-            <button type="button" class="btn btn-danger btn-lg" (click)="remove(alumno)">
-              <i class="bi bi-trash"></i>
-            </button>
+
           </div>
         </div>
       </div>
