CLASE RAFA Refactor image paths in HTML templates for alumno and sector components

--- a/src/app/component/alumno/alumno.admin.plist.routed/alumno.admin.plist.routed.component.html
+++ b/src/app/component/alumno/alumno.admin.plist.routed/alumno.admin.plist.routed.component.html
@@ -78,7 +78,7 @@
     @for (alumno of oPage?.content; track alumno.id) {
     <div class="col">
       <div class="card h-100 shadow-sm bg-light " style="position: relative;">
-        <img src="../../../../../public/img/PerfilUsuario.jpg" alt="Perfil" class="corner-img">
+        <img src="img/PerfilUsuario.jpg" alt="Perfil" class="corner-img">
         <div class="card-body">
           <h5 class="card-title">{{ alumno.nombre }} {{ alumno.ape1 }} {{ alumno.ape2 }}</h5>
           <p class="card-text mb-1"><strong>Email:</strong> {{ alumno.email }}</p>
