--- a/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="item-login ">
-      <a class="btn-login" href="/ENPROCESO" role="button">Login</a>
+      <a class="btn-login" href="/login" role="button">Login</a>
     </div>
 
   </div>
