--- a/src/app/component/shared/shared.login.routed/shared.login.routed.component.html
+++ b/src/app/component/shared/shared.login.routed/shared.login.routed.component.html
@@ -1,36 +1,37 @@
 <div class="row justify-content-center m-3">
-  <div class="col-lg-7 col-md-10 col-sm-12">
-    <h1 class="my-5 text-center">
-      <i class="bi bi-person-circle"></i>
+  <div class="col-lg-6 col-md-8 col-sm-12">
+    <h1 class="my-4 text-center">
+      <i class="bi bi-person-circle me-2"></i>
       Iniciar sesión
-      
     </h1>
 
-
     <div class="login-container">
-      <h2>LOGIN</h2>
+      <h2>Accede a tu cuenta</h2>
 
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-
         <div class="input-group">
           <label for="email">Correo electrónico</label>
-          <input class="form-control" type="email" id="email" name="email" required placeholder="Ingresa tu correo" formControlName="email">
+          <input class="form-control" type="email" id="email" name="email" required placeholder="ejemplo@correo.com"
+            formControlName="email">
         </div>
 
         <div class="input-group">
           <label for="password">Contraseña</label>
-          <input class="form-control" type="password" id="password" name="password" required placeholder="Ingresa tu contraseña" formControlName="password">
+          <div class="password-wrapper">
+            <input [type]="showPassword ? 'text' : 'password'" class="form-control" id="password" name="password"
+              required placeholder="****************" formControlName="password" />
+            <i class="bi" [ngClass]="showPassword ? 'bi-eye-slash' : 'bi-eye'" (click)="togglePasswordVisibility()"></i>
+          </div>
         </div>
-        <button type="submit" class="login-btn">Iniciar sesión</button>
 
-
+        <button class="btn btn-primary w-100 mt-3" type="submit" [disabled]="loginForm.invalid">
+          Iniciar sesión
+        </button>
       </form>
 
-      <!-- Mensaje de error -->
       <div class="error-message" *ngIf="errorMessage">
         {{ errorMessage }}
       </div>
     </div>
-
   </div>
 </div>
