refactor: update dependencies and file paths for Angular Material components

--- a/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -50,4 +50,18 @@
     </div>
 
   </div>
+
+  @if(activeSession){
+    <div class="item-login">
+      <a class="btn-login" href="/logout" role="button">Logout</a>
+      {{userEmail}}
+    </div>
+  }@else {
+    <div class="item-login">
+      <a class="btn-login" href="/login" role="button">Login</a>      
+    </div>
+  }
+
+
+
 </nav>
