--- a/src/app/component/candidatura/candidatura.xalumno.admin.plist.routed/candidatura.xalumno.admin.plist.routed.component.html
+++ b/src/app/component/candidatura/candidatura.xalumno.admin.plist.routed/candidatura.xalumno.admin.plist.routed.component.html
@@ -11,6 +11,7 @@
           Crear nueva candidatura
         </button></a>
 
+
       <div class="d-inline-flex mx-2">
         <input type="text" class="form-control" placeholder="Buscar" (keyup)="filter($event)" [(ngModel)]="strFiltro" />
       </div>
@@ -72,6 +73,7 @@
         </h5>
       </div>
 
+
       <div class="d-flex flex-column">
         <table class="table table-striped table-bordered my-2"
           style="table-layout: fixed; width: 100%; word-break: break-all">
@@ -92,12 +94,15 @@
               </th>
 
               <th (click)="sort('oferta')" class="bg-danger text-white">
-                Oferta @if (strField === 'oferta') { @if (strDir === 'desc') {
+                ID Oferta @if (strField === 'oferta') { @if (strDir === 'desc') {
                 <i class="bi bi-caret-down-fill"></i>
                 } @else {
                 <i class="bi bi-caret-up-fill"></i>} }
               </th>
-
+              
+              <th class="bg-danger text-white">
+                Empresa de la oferta
+              </th>
               <th (click)="sort('acciones')" class="bg-primary text-white">
                 Acciones
                  @if (strField === 'acciones') { @if (strDir === 'desc') {
@@ -118,7 +123,10 @@
                 <a href="admin/oferta/view/{{ candidatura.oferta.id }}">{{ candidatura.oferta.id }}</a>
               </td>
 
+              <td class="text-center">
+                <a href="admin/empresa/view/{{ candidatura.oferta.empresa.id }}">{{ candidatura.oferta.empresa.nombre }}</a>
               <td>
+
                 <div class="btn-group" role="group" aria-label="Basic example">
                   <button type="button" class="btn btn-success" (click)="view(candidatura)">
                     <i class="bi bi-eye icon-15"></i>
