--- a/src/app/component/sector/sector.admin.plist.routed/sector.admin.plist.routed.component.css
+++ b/src/app/component/sector/sector.admin.plist.routed/sector.admin.plist.routed.component.css
@@ -1,3 +1,16 @@
+:root {
+    --bs-primary: #3f14b8;
+    /* un violeta */
+    --bs-success: #00b894;
+    /* verde menta */
+    --bs-danger: #e749a0;
+    /* rojo coral */
+    --bs-warning: #f3bb53;
+    /* amarillo pastel */
+    --bs-info: #74b9ff;
+    /* azul clarito */
+}
+
 .idth , .nombreth, .empresasth, .alumnosth, .ofertasth{
     font-size: 22px;
     font-weight: 400;
@@ -11,9 +24,40 @@ h2{
 td{
     font-size: 15px;
     font-weight: 400;
+        a{
+        text-decoration: none;
+        padding: 0.5rem;
 
+        border: 1px solid var(--bs-info) ;
+        background-color: var(--bs-info);
+        transition: all 0.3s ease-in-out;
+        border-radius: 2rem;
+        color: var(--bs-primary);
+    }
+
+    a:hover{
+        background-color: var(--bs-primary);
+        color: white;
+        border: 2px solid var(--bs-primary);
+    }
 }
 
 .nombreth{
     width: 30%;
+}
+
+.IDsectores{
+    background-color: var(--bs-info);
+
+
+}
+.empresaslista, .alumnoslista, .ofertaslista{
+    padding: 0.5rem;
+}
+
+.bi-0-circle{
+    color: var(--bs-danger);
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
 }
