--- a/src/app/component/shared/shared.login.routed/shared.login.routed.component.html
+++ b/src/app/component/shared/shared.login.routed/shared.login.routed.component.html
@@ -27,6 +27,21 @@
         <button class="btn btn-primary w-100 mt-3" type="submit" [disabled]="loginForm.invalid">
           Iniciar sesión
         </button>
+
+        @if (!production) {
+          <p class="mt-3 text-center">
+            <button class="btn btn-primary w-100 mt-3" (click)="setLoginAdmin()">
+              Admin 
+            </button>
+            <button class="btn btn-primary w-100 mt-3" (click)="setLoginEmpresa()">
+              Empresa
+            </button>
+            <button class="btn btn-primary w-100 mt-3" (click)="setLoginAlumno()">
+              Alumno
+            </button>
+          </p>
+        } 
+
       </form>
 
       <div class="error-message" *ngIf="errorMessage">
